# Ultimate_RAG_learning

./: .gitignore  README.md  backup.txt  main.py  pyproject.toml  requirements.txt
research_notebooks/0-Data_IngestionParsing/: 1-Data_Ingestion_Parsing.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-dataparsingcsv.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb
research_notebooks/0-Data_IngestionParsing/data/databases/: company.db
research_notebooks/1-VectotEmbeddings/: embeddings.ipynb  openaiembeddings.ipynb
research_notebooks/2-VectorStore_VectorDatabase/: chromadb.ipynb
research_notebooks/2-VectorStore_VectorDatabase/chroma_db/: chroma.sqlite3
research_notebooks/3-AdvanceChunking_Strategy/: 1-semantichunking.ipynb
research_notebooks/3-AdvanceChunking_Strategy/Hybrid_Search_Strategy/: 1-densesparse.ipynb  2-reranking.ipynb  3-mmr.ipynb
research_notebooks/3-QueryEnhancement/: 1-queryexpansion.ipynb
